--- a/scss/pages/_about.scss
+++ b/scss/pages/_about.scss
@@ -6,7 +6,7 @@
     background-color: #e7d893;
   }
   .navbar-nav > li.active > a {
-    color: rgb(225, 180, 10);
+    color:firebrick;
   }
   // body
   .left {
