--- a/css/npkg.css
+++ b/css/npkg.css
@@ -84,7 +84,9 @@
 
 .page-id-18 li.current_page_item a { color: firebrick; }
 
-.sub-stripe { width: 19.2%; margin-right: 0.5%; height: 448px; }
+.title-and-menu { border: 1px solid #000; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
+
+.sub-stripe { width: 19.2%; margin-right: 0.5%; height: 448px; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-orient: vertical; -webkit-box-direction: normal; -ms-flex-direction: column; flex-direction: column; -webkit-box-pack: justify; -ms-flex-pack: justify; justify-content: space-between; }
 
 @media (max-width: 992px) { .sub-stripe { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-align: center; -ms-flex-align: center; align-items: center; float: none; width: 100%; height: 160px; text-align: left; }
   .sub-stripe .ttl { margin: 0 0 0 20px; }
@@ -259,7 +261,7 @@ body { background-color: #fff; margin: 60px; }
 
 .error404 .dmbs-main { background-color: #f1e9c5; text-align: center; padding: 50px 0; }
 
-.container { background-color: #fff; padding: 0; border: 1px solid #777 !important; }
+.container { background-color: #fff; padding: 0; border: 1px solid #dbdbdb !important; }
 
 a { color: #000; text-decoration: none; }
 
