--- a/scss/npkg.scss
+++ b/scss/npkg.scss
@@ -42,7 +42,7 @@ body {
 .container {
   background-color: #fff;
   padding: 0;
-  border: 1px solid #777 !important;
+  border: 1px solid #dbdbdb !important;
 }
 
 a {
