--- a/scss/pages/_products.scss
+++ b/scss/pages/_products.scss
@@ -133,11 +133,20 @@
 //////////////////////////////////////////////////
 // sub pages
 //////////////////////////////////////////////////
+.title-and-menu {
+  border: 1px solid #000;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 
 .sub-stripe {
   width: 19.2%;
   margin-right: 0.5%;
   height: 448px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
   //--------
   @include breakpoint(papa-bear) {
     display: flex;
