--- a/css/npkg.css
+++ b/css/npkg.css
@@ -263,6 +263,8 @@ body { background-color: #fff; margin: 60px; }
 
 .container { background-color: #fff; padding: 0; border: 1px solid #dbdbdb !important; }
 
+#rev_slider_1_1 { background-color: #dbdbdb !important; }
+
 a { color: #000; text-decoration: none; }
 
 .home .checker-header { display: -webkit-box; display: -ms-flexbox; display: flex; height: 315px; border-bottom: 2px solid #ebdea6; background: #fff url("../img/checkerboard70.png") -2px 0 repeat; -webkit-box-align: center; -ms-flex-align: center; align-items: center; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; }
