--- a/scss/npkg.scss
+++ b/scss/npkg.scss
@@ -45,6 +45,10 @@ body {
   border: 1px solid #dbdbdb !important;
 }
 
+#rev_slider_1_1 {
+  background-color: #dbdbdb !important;
+}
+
 a {
   color: #000;
   text-decoration: none;
